Fixed smaller styling on mobile to be larger and more readable

--- a/app/globals.css
+++ b/app/globals.css
@@ -145,6 +145,6 @@
     display: none;
   }
   .dayWrapper {
-    width: 95%;
+    width: 99%;
   }
 }
