--- a/components/Day/Day.module.css
+++ b/components/Day/Day.module.css
@@ -73,6 +73,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    /* align-items: flex-start; */
     width: 100%;
     height: auto;
     /* height: 100px; */
@@ -191,7 +192,7 @@
   color: rgb(0, 0, 0);
   border-radius: 50%;
   /* border: solid 1px rgb(182, 182, 182); */
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.8);
   pointer-events: auto;
   z-index: 10;
 }
@@ -215,18 +216,23 @@
 
 @media(max-width: 768px) {
   .dailyScheduleWrapper {
+    width: 100%;
     padding: 0;
   }
   .dayHeader {
     font-size: 1.5rem;
   }
-  .daywrapper {
-    width: 95% !important;
+  .dayWrapper {
+    width: 98% !important;
     max-width: none;
   }
   .eventWrapper {
     width: 100%;
+    padding: 5px;
     max-width: none;
+  }
+  .passingEvent {
+    align-items: center;
   }
   .eventContentWrapper {
     font-size: 1rem;
@@ -235,8 +241,23 @@
   .eventTitle {
     font-size: 1.5rem;
   }
+  .timeAndDurationWrapper {
+    position: absolute;
+    left: 0;
+    top: 0;
+    /* border: solid red 1px; */
+    width: 100px; }
   .timeAndDuration {
     font-size: 1rem;
+
+  }
+  .startTime {
+    margin: 2px;
+    padding: 0;
+  }
+  .duration {
+    margin: 0;
+    padding: 0;
   }
   .prepPeriod {
     font-size: 1rem;
@@ -244,9 +265,6 @@
     right: unset;
     /* bottom: 0; */
     margin: 0;
-  }
-  .timeAndDurationWrapper {
-    position: relative;
   }
   .passingEvent .timeAndDurationWrapper, .passingEvent .duration {
     left: 0;
@@ -260,11 +278,11 @@
     padding: 4px;
   }
   .selectScheduleTypeWrapper {
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
   }
   .scheduleOption {
-    font-size: 1rem;
-    font-weight: 200;
+    font-size: 1.25rem;
+    font-weight: 400;
     padding: .25rem .5rem;
   }
   .todosNotification {
