--- a/components/Todo/Todo.module.css
+++ b/components/Todo/Todo.module.css
@@ -32,7 +32,7 @@
 }
 @media(max-width: 768px) {
   .todoItem {
-    font-size: .75rem;
+    font-size: 1rem;
     padding: .25rem .5rem;
   }
   .description {
@@ -42,7 +42,7 @@
     right: 0;
   }
   .actionIcon {
-    margin: 0 .25rem;
-    font-size: .75rem;
+    margin: 0 .5rem;
+    font-size: 1rem;
   }
 }
